--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div id="buttons">
+    <button class="btn" data-sound="sound1.mp3">applause </button>
+    <button class="btn" data-sound="sound2.mp3">boo</button>
+	<button class="btn">gasp</button>	
+	<button class="btn">tada</button>
+		<button class="btn">victory</button>
+		<button class="btn">wrong</button>
+    <!-- Add more buttons for other sounds -->
+    <button class="btn stop">Stop</button>
+  </div>
 </body>
 
 </html>
