--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="buttons">
+        <button class="btn" data-sound="sound1.mp3">applause</button>
+        <button class="btn" data-sound="sound2.mp3">boo</button>
+        <button class="btn" data-sound="gasp.mp3">gasp</button>
+        <button class="btn" data-sound="tada.mp3">tada</button>
+        <button class="btn" data-sound="victory.mp3">victory</button>
+        <button class="btn" data-sound="wrong.mp3">wrong</button>
+        <button class="btn stop">Stop</button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
-<div id="buttons">
-    <button class="btn" data-sound="sound1.mp3">applause </button>
-    <button class="btn" data-sound="sound2.mp3">boo</button>
-	<button class="btn">gasp</button>	
-	<button class="btn">tada</button>
-		<button class="btn">victory</button>
-		<button class="btn">wrong</button>
-    <!-- Add more buttons for other sounds -->
-    <button class="btn stop">Stop</button>
-  </div>
+
 </body>
 
 </html>
